# rust-basic-learning

./: .gitignore  README.md
a001_know/: Cargo.toml
a001_know/src/: main.rs
a002_variable/: Cargo.toml
a002_variable/src/: main.rs
a003_constant/: Cargo.toml
a003_constant/src/: main.rs
a004_data-types/: Cargo.toml
a004_data-types/src/: main.rs
a005_control-flow/: Cargo.toml
a005_control-flow/src/: main.rs
a006_function_module/: Cargo.toml
a006_function_module/src/: main.rs
a006_function_module/src/garden/: vegetables.rs
a007_ownership/: Cargo.toml
a007_ownership/src/: main.rs
a008_string/: Cargo.toml
a008_string/src/: main.rs
a009_struct/: Cargo.toml
a009_struct/src/: main.rs
a010_enum_and_match/: Cargo.toml
a010_enum_and_match/src/: main.rs
a011_option_and_result/: Cargo.toml
a011_option_and_result/src/: main.rs
a011_option_and_result/src/convert/: to_option.rs  to_result.rs
a011_option_and_result/src/iter/: collection_ownership.rs  for_principle.rs  iter_next.rs  three_kinds_iter.rs
a011_option_and_result/src/option_common_api/: option_and_then.rs  option_as_mut.rs  option_as_ref.rs  option_cloned.rs  option_is_none.rs  option_is_some.rs  option_map.rs  option_replace.rs  option_take.rs
a011_option_and_result/src/result_common_api/: result_and_then.rs  result_as_mut.rs  result_as_ref.rs  result_is_err.rs  result_is_ok.rs  result_map.rs  result_map_err.rs
